--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,7 @@
 
 .header {
   display: flex;
+  align-items: center;
   height: 100vh;
   min-height: 600px;
   max-height: 756px;
@@ -40,7 +41,7 @@
 }
 
 .header__title {
-  margin: auto;
+  margin: 0;
   width: 730px;
   margin-left: 64px;
   line-height: 96px;
@@ -90,7 +91,6 @@
 .description {
   display: flex;
   justify-content: center;
-  position: relative;
   margin-bottom: 100px;
 }
 
@@ -99,7 +99,6 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  min-width: 784px;
 }
 
 .two-columns__brief {
@@ -112,8 +111,8 @@
 }
 
 .two-columns__main-text {
-  position: relative;
   width: 80%;
+  min-width: 784px;
 }
 
 .two-columns__paragraph {
@@ -141,7 +140,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
 }
 
 .section-title {
@@ -158,6 +156,7 @@
 .section-title_theme_dark {
   margin-top: 90px;
   color: white;
+  z-index: 2;
 }
 
 .section-subtitle {
@@ -228,7 +227,7 @@
 }
 
 .feynman {
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(../images/feynman.png);
   background-position: left bottom;
@@ -283,6 +282,9 @@
   height: 877px;
   position: absolute;
   right: -210px;
+  background-image: url(../images/kaufman-triangle.svg);
+  background-position: center;
+  background-size: 877px 877px;
 }
 
 .footer {
@@ -345,10 +347,11 @@
   font-weight: normal;
   color: white;
   text-decoration: none;
-  min-height: 10px;
 }
 
 .footer__social-icon {
   width: 16px;
   height: 16px;
+  margin: 0;
+  margin-right: 10px;
 }
