--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,8 +1,9 @@
 .cards {
     width: 920px;
     margin: 0;
+    padding: 0;
     display: flex;
     list-style-type: none;
     flex-wrap: wrap;
-    gap: 100px;
+    column-gap: 100px;
   }
