--- a/blocks/feynman/__title/feynman__title.css
+++ b/blocks/feynman/__title/feynman__title.css
@@ -1,10 +1,10 @@
 .feynman__title {
-    width: 648px;
+    max-width: 648px;
+    width: 100%;
     line-height: 1.15;
     font-size: 120px;
     font-weight: 600;
     text-align: center;
     margin: 0;
-    margin-top: 100px;
     margin-bottom: 70px;
   }
