--- a/blocks/header/__subtitle/header__subtitle.css
+++ b/blocks/header/__subtitle/header__subtitle.css
@@ -3,11 +3,11 @@
     position: absolute;
     left: 64px;
     bottom: 30px;
-    width: 388px;
+    max-width: 388px;
+    width: 100%;
     line-height: 25px;
     font-size: 18px;
     font-weight: normal;
     color: #000000;
     z-index: 2;
-    text-align: justify;
   }
