--- a/blocks/header/__title/header__title.css
+++ b/blocks/header/__title/header__title.css
@@ -1,6 +1,7 @@
 .header__title {
     margin: 0;
-    width: 730px;
+    max-width: 730px;
+    width: 100%;
     margin-left: 64px;
     line-height: 96px;
     font-size: 102px;
