--- a/blocks/two-columns/__brief/two-columns__brief.css
+++ b/blocks/two-columns/__brief/two-columns__brief.css
@@ -3,6 +3,7 @@
     line-height: 1.2;
     font-size: 18px;
     font-weight: normal;
-    width: 175px;
+    max-width: 175px;
+    width: 100%;
     margin: 0;
   }
